app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.expose: "true"
        kompose.service.type: loadbalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
        - args:
            - bundle
            - exec
            - bin/rails
            - server
            - -b
            - 0.0.0.0
          image: janniswarnat/foreman:3.2-stable
          livenessProbe:
            exec:
              command:
                - nc -z 127.0.0.1 3000 || exit 1
            initialDelaySeconds: 60
            periodSeconds: 300
          name: app
          ports:
            - containerPort: 3000
            - containerPort: 5910
            - containerPort: 5911
            - containerPort: 5912
            - containerPort: 5913
            - containerPort: 5914
            - containerPort: 5915
            - containerPort: 5916
            - containerPort: 5917
            - containerPort: 5918
            - containerPort: 5919
            - containerPort: 5920
            - containerPort: 5921
            - containerPort: 5922
            - containerPort: 5923
            - containerPort: 5924
            - containerPort: 5925
            - containerPort: 5926
            - containerPort: 5927
            - containerPort: 5928
            - containerPort: 5929
            - containerPort: 5930
            - containerPort: 1235
          resources: {}
      hostname: foreman
      restartPolicy: Always
status: {}
