orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: orchestrator
  name: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orchestrator
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.expose: "true"
        kompose.service.type: loadbalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: orchestrator
    spec:
      containers:
        - args:
            - bundle
            - exec
            - sidekiq
            - -r
            - ./extras/dynflow-sidekiq.rb
            - -c
            - "1"
            - -q
            - dynflow_orchestrator
          image: janniswarnat/foreman:3.2-stable
          livenessProbe:
            exec:
              command:
                - nc -z 127.0.0.1 3000 || exit 1
            initialDelaySeconds: 60
            periodSeconds: 300
          name: orchestrator
          resources: {}
      hostname: foreman
      restartPolicy: Always
status: {}
