salt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: salt
  name: salt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: salt
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.expose: "true"
        kompose.service.type: loadbalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: salt
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - mkdir -p /srv/salt && tar -xzvf /tmp/salt-files.tar.gz -C /srv/salt && mkdir -p /etc/salt/pki/master/minions && cp /tmp/docker-salt-minion /etc/salt/pki/master/minions && cp /tmp/raspberrypi /etc/salt/pki/master/minions && cp /tmp/linksmart-black.iot /etc/salt/pki/master/minions && /usr/bin/supervisord
          image: janniswarnat/salt:latest
          name: salt
          ports:
            - containerPort: 4505
            - containerPort: 4506
            - containerPort: 8000
            - containerPort: 9000
            - containerPort: 1234
          resources: {}
          volumeMounts:
            - mountPath: /etc/salt/pki/master/master.pem
              name: master-pem
              subPath: master.pem
            - mountPath: /etc/salt/pki/master/master.pub
              name: master-pub
              subPath: master.pub
            - mountPath: /tmp/docker-salt-minion
              name: minion-pub
              subPath: docker-salt-minion
            - mountPath: /tmp/raspberrypi
              name: raspberrypi-pub
              subPath: raspberrypi
            - mountPath: /tmp/linksmart-black.iot
              name: linksmart-black-iot-pub
              subPath: linksmart-black.iot
            - mountPath: /github.com/smart-proxy/config/settings.yml
              name: settings-yml
              subPath: settings.yml
            - mountPath: /github.com/smart-proxy/config/settings.d/salt.yml
              name: salt-yml
              subPath: salt.yml
            - mountPath: /github.com/smart-proxy/config/settings.d/dynflow.yml
              name: dynflow-yml
              subPath: dynflow.yml
            - mountPath: /etc/salt/master.d/foreman.conf
              name: foreman-conf
              subPath: foreman.conf
            - mountPath: /etc/salt/foreman.yaml
              name: foreman-yaml
              subPath: foreman.yaml
            - mountPath: /etc/supervisor/supervisord.conf
              name: supervisor-conf
              subPath: supervisord.conf
            - mountPath: /tmp/salt-files.tar.gz
              name: salt-files
              subPath: salt-files.tar.gz
            - mountPath: /srv/pillar/top.sls
              name: pillar-top
              subPath: top.sls
            - mountPath: /srv/pillar/default.sls
              name: pillar-default
              subPath: default.sls
            - mountPath: /srv/pillar/raspberrypi.sls
              name: pillar-raspberrypi
              subPath: raspberrypi.sls
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: master.pem
                path: master.pem
            name: master-pem
          name: master-pem
        - configMap:
            items:
              - key: master.pub
                path: master.pub
            name: master-pub
          name: master-pub
        - configMap:
            items:
              - key: minion.pub
                path: docker-salt-minion
            name: minion-pub
          name: minion-pub
        - configMap:
            items:
              - key: raspberrypi
                path: raspberrypi
            name: raspberrypi-pub
          name: raspberrypi-pub
        - configMap:
            items:
              - key: linksmart-black.iot
                path: linksmart-black.iot
            name: linksmart-black-iot-pub
          name: linksmart-black-iot-pub
        - configMap:
            items:
              - key: settings.yml
                path: settings.yml
            name: settings-yml
          name: settings-yml
        - configMap:
            items:
              - key: salt.yml
                path: salt.yml
            name: salt-yml
          name: salt-yml
        - configMap:
            items:
              - key: dynflow.yml
                path: dynflow.yml
            name: dynflow-yml
          name: dynflow-yml
        - configMap:
            items:
              - key: foreman.conf
                path: foreman.conf
            name: foreman-conf
          name: foreman-conf
        - configMap:
            items:
              - key: foreman.yaml
                path: foreman.yaml
            name: foreman-yaml
          name: foreman-yaml
        - configMap:
            items:
              - key: supervisord.conf
                path: supervisord.conf
            name: supervisor-conf
          name: supervisor-conf
        - configMap:
            items:
              - key: salt-files.tar.gz
                path: salt-files.tar.gz
            name: salt-files
          name: salt-files
        - configMap:
            items:
              - key: top.sls
                path: top.sls
            name: pillar-top
          name: pillar-top
        - configMap:
            items:
              - key: default.sls
                path: default.sls
            name: pillar-default
          name: pillar-default
        - configMap:
            items:
              - key: raspberrypi.sls
                path: raspberrypi.sls
            name: pillar-raspberrypi
          name: pillar-raspberrypi
status: {}
