nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-03-29T13:59:00Z"
  labels:
    app: nginx
  name: nginx
  namespace: default
  resourceVersion: "2267"
  uid: e3e5d1fd-d402-4c2d-abf2-bda6fcb0d61b
spec:
  clusterIP: 10.43.58.66
  clusterIPs:
  - 10.43.58.66
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
