salt-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: salt
  name: salt
spec:
  ports:
    - name: "4505"
      port: 4505
      targetPort: 4505
#      nodePort: 30001
    - name: "4506"
      port: 4506
      targetPort: 4506
#      nodePort: 30002
    - name: "8000"
      port: 8000
      targetPort: 8000
#      nodePort: 30000
    - name: "9000"
      port: 9000
      targetPort: 9000
#      nodePort: 31000
    - name: "1234"
      port: 1234
      targetPort: 1234
  selector:
    io.kompose.service: salt
#  type: LoadBalancer
status:
  loadBalancer: {}
